--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
             <a class="action watch" href="">Watch</a>
         </div>
         <div class="board"></div>
-        <script src="main.js" type="module"></script>
+        <script src="client/main.js" type="module"></script>
     </body>
 </html>
